syntax = "proto3";

package user;

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse);
    rpc GetUser (UserID) returns (UserResponse);
}

message UserRequest {
    string name = 1;
    string email = 2;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserID {
    s
}